Fix sizes and spacings in all areas

--- a/styles.css
+++ b/styles.css
@@ -20,28 +20,28 @@ body {
 }
 
 #header {
-    padding: 1.5% 10%;
+    padding: 1.5% 15%;
     display: flex;
     justify-content: space-between;
     background-color: #1f2937;
 }
 #header h1 {
     color: #f9faf8;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 700;
 }
 #header ul {
     display: flex;
     justify-content: space-between;
-    gap: 15px;
+    gap: 18px;
     color: #e5e7eb;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 300;
 }
 
 #hero {
     background-color: #1f2937;
-    padding: 10%;
+    padding: 8% 15%;
     display: flex;
     gap: 5%;
 }
@@ -50,18 +50,20 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 10px;
 }
 #hero-right {
-    flex: 1 1 0;
+    flex: 1 1 50px;
 }
 #hero-left h1 {
     color: #f9faf8;
-    font-size: 48px;
+    font-size: 44px;
     font-weight: 700;
 }
 #hero-left p {
-    font-size: 18px;
+    font-size: 16px;
+    font-weight: 300;
     color: #e5e7eb;
 }
 #hero-left button {
@@ -79,7 +81,7 @@ body {
 }
 
 #info {
-    padding: 5% 20%;
+    padding: 3% 20% 8% 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -87,7 +89,7 @@ body {
     gap: 50px;
 }
 #info h2 {
-    font-size: 36px;
+    font-size: 32px;
 }
 #info-car {
     display: flex;
@@ -101,10 +103,10 @@ body {
     gap: 10px;
     text-align: center;
     color: #7a7b7f;
-    font-size: 18px;
+    font-size: 16px;
 }
 .info-item div {
-    border: 4px solid #3882f6;
+    border: 3px solid #3882f6;
     border-radius: 15px;
     flex: 1 1 150px;
     width: 150px;
@@ -139,13 +141,13 @@ body {
 }
 
 #cta {
-    padding: 8% 12%;
+    padding: 7% 13%;
     color: #e5e7eb;
 }
 #cta-content {
     background-color: #3882f6;
     border-radius: 10px;
-    padding: 50px 40px;
+    padding: 45px 40px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -174,4 +176,5 @@ footer {
     text-align: center;
     font-size: 16px;
     font-weight: 300;
+    word-spacing: .5em;
 }
